Fixing button press on safari mobile

--- a/css/landing.css
+++ b/css/landing.css
@@ -42,6 +42,7 @@
     font-size: 20px;
     margin-left: auto;
     margin-right:auto;
+    cursor: pointer;
 }
 
 .btn:hover{
